--- a/public/components/dashboard/dashboard.html
+++ b/public/components/dashboard/dashboard.html
@@ -3,15 +3,15 @@
   	<h1>{{title}}</h1>
 
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search Ticker" ng-model="query">
+      <input type="text" class="form-control" ng-keydown="$event.keyCode == 13 && searchClick()" placeholder="Search Ticker" ng-model="query">
       <span class="input-group-addon"  ng-click="searchClick()">Search</span>
     </div>
   </div>
 
-  <table ng-repeat="a in [0,1,2,3,4,5]">
-    <tr>
-      <td>{{stockArray[a].dataset_code}}</td>
-    </tr>
+  <table class="table" ng-repeat="a in [0,1,2,3,4,5]">
+    <thead>
+      <th>{{stockArray[a].dataset_code}}</th>
+    </thead>
     <tr>
       <td ng-repeat="i in [0,1,2,3,4,5,6,7,8,9,10,11,12]">{{stockArray[a].column_names[i]}}</td>
     </tr>
