--- a/public/components/single/single.html
+++ b/public/components/single/single.html
@@ -3,15 +3,15 @@
   	<h1>{{title}}</h1>
 
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search Ticker" ng-model="query">
+      <input type="text" class="form-control" ng-keydown="$event.keyCode == 13 && searchClick()" placeholder="Search Ticker" ng-model="query">
       <span class="input-group-addon"  ng-click="searchClick()">Search</span>
     </div>
   </div>
 
-  <table>
-    <tr>
+  <table class="table">
+    <thead>
       <td ng-repeat="i in [0,1,2,3,4,5,6,7,8,9,10,11,12]">{{StockDetails.column_names[i]}}</td>
-    </tr>
+    </thead>
     <tr ng-repeat="j in [0,1,2,3,4]">
       <td ng-repeat="i in [0,1,2,3,4,5,6,7,8,9,10,11,12]">{{StockDetails.data[j][i]}}</td>
     </tr>
