--- a/public/components/portfolio/portfolio.html
+++ b/public/components/portfolio/portfolio.html
@@ -2,44 +2,29 @@
   <div class="jumbotron text-center">
   	<h1>{{title}}</h1>
 
-    <div class="input-group">
-      <span class="input-group-addon"  ng-click="searchClick()">Search</span>
+    <div>
+      <button type="button" class="btn btn-primary"  ng-click="searchClick()">Search</button>
     </div>
   </div>
 
-  <!-- Large modal -->
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-lg">Large modal</button>
-
-  <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        ...
-      </div>
+  <div class="input-group">
+      <input type="text" class="form-control" placeholder="STOCK TICKER" ng-model="query" ng-keydown="$event.keyCode == 13 && addStock()">
+      <span class="input-group-btn">
+        <button class="btn btn-primary" type="button" ng-click="addStock()">ADD STOCK</button>
+      </span>
     </div>
-  </div>
 
-  <!-- Small modal -->
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bs-example-modal-sm">Small modal</button>
-
-  <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-    <div class="modal-dialog modal-sm" role="document">
-      <div class="modal-content">
-        ...
-      </div>
-    </div>
-  </div>
-
-  <table class="table" ng-repeat="a in [0,1,2,3,4,5]">
+  <table class="table" ng-repeat="a in stockArray">
     <thead class="thead-default">
       <tr>
-        <th><h4>{{stockArray[a].dataset_code}} - </h4></th>
+        <th><h4>{{a.dataset_code}} - </h4></th>
       </tr>
     </thead>
     <tr>
-      <td ng-repeat="i in [0,1,2,3,4,5,6,7,8,9,10,11,12]">{{stockArray[a].column_names[i]}}</td>
+      <td ng-repeat="i in [0,1,2,3,4,5,6,7,8,9,10,11,12]">{{a.column_names[i]}}</td>
     </tr>
     <tr ng-repeat="j in [0]">
-      <td ng-repeat="i in [0,1,2,3,4,5,6,7,8,9,10,11,12]">{{stockArray[a].data[j][i]}}</td>
+      <td ng-repeat="i in [0,1,2,3,4,5,6,7,8,9,10,11,12]">{{a.data[j][i]}}</td>
     </tr>
   </table>
 
