--- a/public/components/single/single.html
+++ b/public/components/single/single.html
@@ -10,10 +10,10 @@
 
   <table class="table">
     <thead>
-      <td ng-repeat="i in [0,1,2,3,4,5,6,7,8,9,10,11,12]">{{StockDetails.column_names[i]}}</td>
+      <td ng-repeat="i in numIArray">{{StockDetails.column_names[i]}}</td>
     </thead>
-    <tr ng-repeat="j in [0,1,2,3,4]">
-      <td ng-repeat="i in [0,1,2,3,4,5,6,7,8,9,10,11,12]">{{StockDetails.data[j][i]}}</td>
+    <tr ng-repeat="j in numJArray">
+      <td ng-repeat="i in numIArray">{{StockDetails.data[j][i]}}</td>
     </tr>
   </table>
 
