added success alert to portfolio additions

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 td {padding: 20px 20px 20px 20px;}
 
-.mar-top--30{margin-top: -30px;}
+.mar-top-30{margin-top: -30px;}
 .mar-top-5{margin-top: 5px;}
 .mar-top-10{margin-top: 10px;}
 .mar-top-20{margin-top: 20px;}
