--- a/public/components/portfolio/portfolio.html
+++ b/public/components/portfolio/portfolio.html
@@ -8,11 +8,18 @@
   </div>
 
   <div class="input-group">
-      <input type="text" class="form-control" placeholder="STOCK TICKER" ng-model="query" ng-keydown="$event.keyCode == 13 && addStock()">
+      <input type="text" ng-focus="isStockAdded = false" class="form-control" placeholder="STOCK TICKER" ng-model="query" ng-keydown="$event.keyCode == 13 && addStock()">
       <span class="input-group-btn">
         <button class="btn btn-primary" type="button" ng-click="addStock()">ADD STOCK</button>
       </span>
+  </div>
+
+  <div class="mar-top-10" ng-show="isStockAdded">
+    <div class="alert alert-success alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close" ng-click="isStockAdded = false"><span aria-hidden="true">&times;</span></button>
+      <strong>{{query}}</strong> was added to your portfolio.
     </div>
+  </div>
 
   <table class="table" ng-repeat="a in stockArray">
     <thead class="thead-default">
